# WorldSystem

./: .env  .env.example  .gitignore  .gitmodules  AIChanges.md  CLAUDE.md  CONSOLIDATION_PLAN.md  CRITICAL_ISSUES_ANALYSIS.md  GIT_CLEANUP_SUMMARY.md  H264_VIDEO_STREAMING.md  MIGRATION_SUMMARY.md  README.md  WEBSOCKET_MIGRATION.md  asdfCLAUDE.local.md  cleanup_create_templates.sh  cleanup_git_history.sh  debug_simulator.py  docker-compose-build.sh  docker-compose-up.sh  docker-compose.override.yml  docker-compose.yml  logs.txt  output.txt  package-lock.json  point_cloud_to_mesh.md  prometheus.yml  random.ipynb  rerun_docs.txt  run_tests.py  slam3r_to_mesh_service_data_log.txt  start.sh  test_full_pipeline.sh  test_segment_detection.py  test_slam3r_keyframes.py  test_slam3r_mesh_integration.py  test_slam3r_real_video.py  test_websocket_producer.py  test_websocket_streaming.py  timestamps.txt
AndroidApp/: CLAUDE.md  local.properties  settings.gradle  sources.md
Archive/: status-report.md  tsdf_slice_000240.txt
Drone_Camera_Imu_Config/: EuRoC_mono.yaml  EuRoC_mono_inertial.yaml  awesome-camchain-imucam.yaml  awesome-imu.yaml  awesome-results-imucam.txt  drone_calibration_26_2_25-imu.yaml  drone_config.yaml  make_orbslam_file.py
Paper/: Graphs.ipynb  data.csv  internet_speeds.txt  results_3g.csv  results_fast_4g.csv  results_full.csv
WebSocketTest/: gradle.properties  gradle.properties.example
assets/: callibration.py  dist.pkl
common/: rtsp_consumer.py  websocket_video_consumer.py
docker/: .env  .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  test_rerun.py
fantasy/: .gitattributes  .gitignore  Dockerfile  README.md  main.py  requirements.txt
frame_processor/: .env.example  .gitignore  CLAUDE.md  Dockerfile  ENHANCED_VISUALIZER_GUIDE.md  GROUNDED_SAM2_VERIFICATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_v3.md  LOGGING_CONFIGURATION.md  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  README.md  README_RICH_TERMINAL.md  REFACTORING_PLAN.md  RERUN_FIX_SUMMARY.md  SAM2_IMPLEMENTATION_UNIFIED.md  SAM2_VIDEO_INTEGRATION_PLAN.md  SAM2_video_with_feedback.md  SAM_USAGE_GUIDE.md  VISUALIZATION_UPDATE_SUMMARY.md  WEBSOCKET_UNIFIED.md  YOLO_REMOVAL_SUMMARY.md  enhanced_rerun_visualizer.py  frame_processor.py  frame_processor_original.py  grounded_sam2_processor.py  implementation.md  install_models.sh  integrate_enhanced_visualizer.py  main.py  model_configs.py  requirements-test.txt  requirements.txt  rerun_redesign.md  rerun_redesign_visual.html  reverse_lookup.py  run_refactored.sh  run_tests_local.sh  sam2_configs.py  (+13 more)
mast3r/: output.txt
master/: Dockerfile  mast3r_processor.py  setup.py
mesh_service/: .dockerignore  .gitignore  ALGORITHMS_IMPLEMENTED.md  CMakeLists.txt  CMakeLists_test.txt  CONFIG.md  Dockerfile  Dockerfile.debug  FUTURE_ALGORITHMS.md  POISSON_IMPLEMENTATION_PLAN.md  README.md  algorithm_implementation.md  current.txt.md  entrypoint.sh  issues.md  mesh_service_docker_logs.txt  normals_implementation.md  plan.md  requirements.txt  test_build.sh  test_mesh_service.py
mesh_service/archive_cpp_v1/: README_ARCHIVE.md
mesh_service/archive_cpp_v1/include/: mesh_generator.h  metrics.h  rerun_publisher.h  websocket_server.h
mesh_service/archive_cpp_v1/include/algorithms/: open3d_poisson.h
mesh_service/archive_cpp_v1/include/config/: configuration_manager.h  mesh_service_config.h  poisson_config.h
mesh_service/archive_cpp_v1/src/: gpu_poisson_reconstruction.cu  main.cpp  octree.cpp  shared_memory.cpp  simple_tsdf.cu  websocket_server.cpp
mesh_service/archive_cpp_v1/src/algorithms/: nvidia_marching_cubes.cu  open3d_poisson.cpp
mesh_service/archive_cpp_v1/src/normal_providers/: open3d_normal_provider.cpp
mesh_service/debug_output/: README.md  tsdf_slice_000010.txt  tsdf_slice_000040.txt
mesh_service/include/: algorithm_selector.h  gpu_octree.h  gpu_poisson_reconstruction.h  marching_cubes.h  marching_cubes_tables.h  mesh_generator.h  metrics.h  nksr_reconstruction.h  normal_estimation.h  normal_provider.h  poisson_reconstruction.h  rabbitmq_consumer.h  shared_memory.h  simple_tsdf.h  tsdf_config.h
mesh_service/include/algorithms/: algorithm_base.h  nvidia_marching_cubes.h
mesh_service/include/config/: configuration_manager.h  mesh_service_config.h  normal_provider_config.h
mesh_service/include/normal_providers/: camera_based_normal_provider.h  open3d_normal_provider.h
mesh_service/python/: __init__.py  config.py  main.py
mesh_service/python/io_handlers/: __init__.py  rabbitmq_consumer.py  shared_memory.py  websocket_consumer.py  websocket_consumer.py.deprecated
mesh_service/python/processing/: __init__.py  optimizer.py  point_cloud_manager.py
mesh_service/python/utils/: __init__.py  logger.py
mesh_service/python/visualization/: __init__.py  blueprint_manager.py  rerun_publisher.py
mesh_service/src/: algorithm_selector.cpp  configuration_manager.cpp  enhanced_marching_cubes.cu  gpu_octree.cu  main.cpp  main_simple.cpp  main_test.cpp  marching_cubes.cu  marching_cubes_tables.cu  mesh_generator.cu  mesh_generator_old.cu  metrics.cpp  nksr_reconstruction.cu  normal_estimation.cu  normal_provider_factory.cpp  poisson_reconstruction.cpp  rabbitmq_consumer.cpp  rerun_publisher.cpp  shared_memory.cpp  simple_mesh_generator.cu  simple_tsdf.cu
mesh_service/src/algorithms/: nvidia_marching_cubes.cu
mesh_service/src/normal_providers/: camera_based_normal_provider.cu  open3d_normal_provider.cpp
nginx/: Dockerfile  nginx.conf
server/: .gitattributes  .gitignore  Dockerfile  README.md  environment.yml  main.py
shared/: setup.py
simulation/: Dockerfile  environment.yml  run_simulation.sh  simulate_data.py  simulate_video_stream.py  test_stream.sh
slam3r/: .dockerignore  CLAUDE.md  Dockerfile  EuRoC_mono_inertial.yaml  analyze_ply_files.py  camera_intrinsics.yaml  output.txt  slam3r_processor.py
storage/: Dockerfile  add_timestamps.py  clean_up_data.py  create_video.py  data_storage.py  imu_stats.py  rabbitmq_config.py  rtsp_storage.py  video_storage.py  websocket_storage.py
(+290 files in other folders)
